[gd_scene load_steps=26 format=1]

[ext_resource path="res://script/gameplay.gd" type="Script" id=1]
[ext_resource path="res://img/bg/back.png" type="Texture" id=2]
[ext_resource path="res://img/bg/fore.png" type="Texture" id=3]
[ext_resource path="res://img/divide.png" type="Texture" id=4]
[ext_resource path="res://script/divide.gd" type="Script" id=5]
[ext_resource path="res://img/bg.png" type="Texture" id=6]
[ext_resource path="res://script/player.gd" type="Script" id=7]
[ext_resource path="res://img/playeraura.png" type="Texture" id=8]
[ext_resource path="res://img/collect.png" type="Texture" id=9]
[ext_resource path="res://img/gg.png" type="Texture" id=10]
[ext_resource path="res://font/diner.fnt" type="BitmapFont" id=11]
[ext_resource path="res://img/full.png" type="Texture" id=12]
[ext_resource path="res://img/mute.png" type="Texture" id=13]
[ext_resource path="res://img/selfdestruct.png" type="Texture" id=14]
[ext_resource path="res://img/space.png" type="Texture" id=15]
[ext_resource path="res://sfx/collect.wav" type="Sample" id=16]
[ext_resource path="res://sfx/explosion.wav" type="Sample" id=17]
[ext_resource path="res://sfx/gameover0.wav" type="Sample" id=18]
[ext_resource path="res://sfx/gameover1.wav" type="Sample" id=19]
[ext_resource path="res://sfx/gameover2.wav" type="Sample" id=20]
[ext_resource path="res://sfx/gameover3.wav" type="Sample" id=21]
[ext_resource path="res://sfx/gameover4.wav" type="Sample" id=22]
[ext_resource path="res://sfx/highscore.wav" type="Sample" id=23]
[ext_resource path="res://sfx/shift.wav" type="Sample" id=24]

[sub_resource type="SampleLibrary" id=1]

samples/collect = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 16 )
}
samples/explosion = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 17 )
}
samples/gameover0 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 18 )
}
samples/gameover1 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 19 )
}
samples/gameover2 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 20 )
}
samples/gameover3 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 21 )
}
samples/gameover4 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 22 )
}
samples/highscore = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 23 )
}
samples/rattle = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 17 )
}
samples/shift = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 24 )
}

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Camera" type="Camera2D" parent="."]

transform/pos = Vector2( 512, 300 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="Back1" type="Sprite" parent="."]

transform/pos = Vector2( 0, 300 )
z/z = -5
texture = ExtResource( 2 )

[node name="Back2" type="Sprite" parent="."]

transform/pos = Vector2( 1024, 300 )
z/z = -5
texture = ExtResource( 2 )

[node name="Fore1" type="Sprite" parent="."]

transform/pos = Vector2( 0, 300 )
z/z = -5
texture = ExtResource( 3 )

[node name="Fore2" type="Sprite" parent="."]

transform/pos = Vector2( 1024, 300 )
z/z = -5
texture = ExtResource( 3 )

[node name="Divide" type="Sprite" parent="."]

transform/pos = Vector2( 512, 300 )
transform/scale = Vector2( 1.05, 1 )
z/z = -4
texture = ExtResource( 4 )
vframes = 8
script/script = ExtResource( 5 )

[node name="bg" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( 512, 300 )
z/z = -4
texture = ExtResource( 6 )

[node name="Player" type="Node2D" parent="."]

visibility/visible = false
transform/pos = Vector2( 512, 300 )
script/script = ExtResource( 7 )

[node name="LifeAura" type="Sprite" parent="Player"]

transform/pos = Vector2( -390, -135 )
transform/scale = Vector2( 2, 1 )
z/z = -3
texture = ExtResource( 8 )
vframes = 4
hframes = 2
modulate = Color( 1, 0.705882, 0.941176, 1 )

[node name="DeathAura" type="Sprite" parent="Player"]

transform/pos = Vector2( -390, 135 )
z/z = -3
texture = ExtResource( 8 )
flip_v = true
vframes = 4
hframes = 2
frame = 4
modulate = Color( 0.705882, 0.941176, 1, 1 )

[node name="Battery" type="Node2D" parent="."]

[node name="CollectSprite" type="Sprite" parent="."]

visibility/opacity = 0.0
transform/pos = Vector2( 512, 300 )
texture = ExtResource( 9 )

[node name="GGSprite" type="Sprite" parent="."]

transform/pos = Vector2( 958.363, 538.578 )
transform/scale = Vector2( 0.666, 0.666 )
texture = ExtResource( 10 )

[node name="ScoreLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 64.0
margin/top = 275.0
margin/right = 211.0
margin/bottom = 320.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HighScoreLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 827.0
margin/top = 275.0
margin/right = 960.0
margin/bottom = 320.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "HIGH SCORE: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="InstructLabel" type="Label" parent="."]

rect/scale = Vector2( 0.666, 0.666 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 47.0
margin/top = 492.0
margin/right = 240.0
margin/bottom = 633.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 1, 0.705882, 0.941176, 1 )
text = "TOGGLE MUTE
TOGGLE FULLSCREEN
QUIT GAME"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="full" type="Sprite" parent="InstructLabel"]

transform/pos = Vector2( -32, 70.5022 )
transform/scale = Vector2( 0.666, 0.666 )
texture = ExtResource( 12 )

[node name="mute" type="Sprite" parent="InstructLabel"]

transform/pos = Vector2( -32, 22.0496 )
transform/scale = Vector2( 0.666, 0.666 )
texture = ExtResource( 13 )

[node name="selfdestruct" type="Sprite" parent="InstructLabel"]

transform/pos = Vector2( -32, 118.891 )
transform/scale = Vector2( 0.666, 0.666 )
texture = ExtResource( 14 )

[node name="SpaceLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 293.0
margin/top = 391.0
margin/right = 747.0
margin/bottom = 484.0
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 1, 0.705882, 0.941176, 1 )
text = "PRESS"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SpaceSprite" type="Sprite" parent="SpaceLabel"]

transform/pos = Vector2( 218, 28 )
texture = ExtResource( 15 )

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = null
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 1 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0


